✨自定义注销页面

--- a/security/src/main/resources/templates/login.html
+++ b/security/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="container">
-  <form class="form-signin" method="post" action="/login/identify">
+  <form class="form-signin" method="post" action="/identify/login">
     <h2 class="form-signin-heading">Please sign in</h2>
     <div class="form-item">
       <label for="username" class="sr-only">Username</label>
