--- a/security/src/main/resources/templates/index.html
+++ b/security/src/main/resources/templates/index.html
@@ -3,8 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <style>
+    a {
+      display: inline-block;
+      padding: 5px 15px;
+      text-decoration: none;
+      color: black;
+      font-size: 18px;
+      border: 1px solid black;
+    }
+  </style>
 </head>
 <body>
-Hello
+<h1>Hello</h1>
+<a href="/user">user</a>
 </body>
 </html>
