--- a/security/src/main/resources/templates/user.html
+++ b/security/src/main/resources/templates/user.html
@@ -3,8 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <style>
+    a {
+      display: inline-block;
+      padding: 5px 15px;
+      text-decoration: none;
+      color: black;
+      font-size: 18px;
+      border: 1px solid black;
+    }
+  </style>
 </head>
 <body>
-user
+<h1>User</h1>
+<a class="logout" href="/identify/logout">logout</a>
+
+<script>
+const logout = document.querySelector(".logout");
+logout.onclick = () => confirm("确定要退出吗");
+</script>
 </body>
 </html>
