🎨修改页面样式

--- a/security/src/main/resources/templates/login.html
+++ b/security/src/main/resources/templates/login.html
@@ -3,51 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="/css/pure.css">
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      position: relative;
-      background-color: #CCCCCC;
-      color: #363636;
-    }
-    .container, .form-signin {
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-    .form-signin {
-      margin: 300px 0;
       flex-direction: column;
-    }
-    .form-item {
-      margin: 10px 0;
-    }
-    .btn {
-      padding: 10px 30px;
-      font-size: 24px;
-      background: cadetblue;
-      color: white;
-      border: 0;
-      outline: 0;
     }
   </style>
 </head>
 <body>
-<div class="container">
-  <form class="form-signin" method="post" action="/identify/login">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <div class="form-item">
-      <label for="username" class="sr-only">Username</label>
-      <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+  <h1>Please sign in</h1>
+  <form class="pure-form pure-form-stacked" method="post" action="/identify/login">
+    <div class="pure-control-group">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" placeholder="Username" required autofocus>
     </div>
-    <div class="form-item">
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+
+    <div class="pure-control-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Password" required>
     </div>
+
     <input type="hidden" th:if="${_csrf != null}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <div class="pure-controls">
+      <button class="pure-button pure-button-primary" type="submit">Sign in</button>
+    </div>
   </form>
-</div>
 </body>
 </html>
