--- a/security/src/main/resources/templates/user.html
+++ b/security/src/main/resources/templates/user.html
@@ -16,11 +16,6 @@
 </head>
 <body>
 <h1>User</h1>
-<a class="logout" href="/identify/logout">logout</a>
-
-<script>
-const logout = document.querySelector(".logout");
-logout.onclick = () => confirm("确定要退出吗");
-</script>
+<a class="logout" href="/logout">logout</a>
 </body>
 </html>
