--- a/security/src/main/resources/templates/login.html
+++ b/security/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Login</title>
   <link rel="stylesheet" href="/css/pure.css">
   <style>
     body {
@@ -11,10 +11,20 @@
       align-items: center;
       flex-direction: column;
     }
+    .tips {
+      font-size: 18px;
+      color: #b94a48;
+      margin: 0 0 10px 0;
+      padding: 5px 25px;
+      border: 1px solid #b94a48;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
   <h1>Please sign in</h1>
+  <div class="tips" th:if="${err != null}" th:text="${err}"></div>
+  <div class="tips" th:if="${logout != null}" th:text="${logout}"></div>
   <form class="pure-form pure-form-stacked" method="post" action="/identify/login">
     <div class="pure-control-group">
       <label for="username">Username</label>
