--- a/security/src/main/resources/templates/logout.html
+++ b/security/src/main/resources/templates/logout.html
@@ -2,7 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Logout</title>
   <link rel="stylesheet" href="/css/pure.css">
   <style>
     body {
