🚧SpringSecurity页面以及配置

--- a/irs-order/src/main/resources/templates/user.html
+++ b/irs-order/src/main/resources/templates/user.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <h1 th:text="'Helllo! '+${username}"></h1>
-<a class="logout" href="/logout">logout</a>
+<a href="/logout">logout</a>
+<a href="/"></a>
 </body>
 </html>
