🎨网页添加其他授权模式方法

--- a/irs-order/src/main/resources/templates/login.html
+++ b/irs-order/src/main/resources/templates/login.html
@@ -40,6 +40,7 @@
     <input type="hidden" th:if="${_csrf != null}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <div class="pure-controls">
       <button class="pure-button pure-button-primary" type="submit">Sign in</button>
+      <a class="pure-button" href="/">cancel</a>
     </div>
   </form>
 </body>
