--- a/irs-order/src/main/resources/templates/user.html
+++ b/irs-order/src/main/resources/templates/user.html
@@ -17,6 +17,6 @@
 <body>
 <h1 th:text="'Helllo! '+${username}"></h1>
 <a href="/logout">logout</a>
-<a href="/"></a>
+<a href="/">首页</a>
 </body>
 </html>
